add and change multiple styling components

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -36,9 +36,9 @@ body {
     background: #ffffff;
     color: #333333;
     overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
-    -moz-box-shadow: 0 0 0.3em #4D8618;
-    -webkit-box-shadow: 0 0 0.3em #4D8618;
-    box-shadow: 0 0 0.3em #4D8618;
+    -moz-box-shadow: 0 0 0.3em #973F3F;
+    -webkit-box-shadow: 0 0 0.3em #973F3F;
+    box-shadow: 0 0 0.3em #973F3F;
 }
 
 #grailsLogo {
@@ -75,7 +75,6 @@ img {
 
 .content h1 {
     border-bottom: 1px solid #CCCCCC;
-    margin: 0.8em 1em 0.3em;
     padding: 0 0.25em;
 }
 
@@ -94,7 +93,7 @@ img {
 }
 
 .footer a {
-    color: #4D8618;
+    color: #973F3F;
 }
 
 .spinner {
@@ -174,7 +173,7 @@ img {
 }
 
 .nav li.dropdown.open ul.dropdown-menu {
-    background-color: #4D8618;
+    background-color: #973F3F;
 }
 
 /* CREATE/EDIT FORMS AND SHOW PAGES */
@@ -446,7 +445,7 @@ th.desc a {
 }
 
 th:hover, tr:hover {
-    background: #79b94c;
+    background: #D8D8D8;
 }
 
 /* PAGINATION */
@@ -561,7 +560,7 @@ a.skip {
 }
 
 .grails-logo-container {
-    background:#79b94c no-repeat 50% 30%;
+    background:#973F3F no-repeat 50% 30%;
     margin-bottom: 20px;
     color: white;
     height:300px;
