--- a/grails-app/assets/stylesheets/stylesheet.css
+++ b/grails-app/assets/stylesheets/stylesheet.css
@@ -1,4 +1,3 @@
-/* page index */
 
 .tsButton{
     background-color: #973F3F;
@@ -6,6 +5,11 @@
 }
 
 .tsButton:hover{
+    background-color: #424242;
+    border: none;
+}
+
+.tsButton:active{
     background-color: #424242;
     border: none;
 }
@@ -22,6 +26,10 @@
 
 }
 
+.ns_logo{
+    margin-top: 30px;
+}
+
 
 .grails-logo-container {
     background:#973F3F no-repeat 50% 30%;
@@ -29,6 +37,7 @@
     color: white;
     height:300px;
     text-align:center;
+    margin-top: 0px;
 }
 
 .navbar {
@@ -41,89 +50,13 @@
     font-family: "Caflisch Script";
 }
 
-
-
-
-
-
-
-
-
-/*
-
-
-#containerIndex {
-    width: 250px;
-    height: 250px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+.tsshow{
+   margin-left: 80px;
 }
 
-#indexTitle {
-    padding-bottom: 30px;
+
+.content header_question{
+    margin: 0.1em 1em 0.3em;
 }
 
-#createForTeacher {
-    font-size: 18px;
-}
 
-#createForStudent {
-    font-size: 18px;
-    text-align: right;
-}
-
-#resultForTeacher {
-    font-size: 18px;
-}
-
-.circle {
-    width: 500px;
-    height: 500px;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    background: rgba(192, 192, 192, 0.29);
-    -moz-border-radius: 400px;
-    -webkit-border-radius: 400px;
-    border-radius: 400px;
-}
-
-!* navbar *!
-.navbar-default {
-    background-color: #292b2c; !important;
-}
-
-.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
-    color: #fff;
-}
-
-body {
-    background-color: #FFFFFF;
-}
-
-body > .container {
-    width: 500px;
-    padding-top: 80px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-label {
-    padding-top: 3px;
-    padding-right: 10px;
-}
-
-input {
-    height: 28px !important;
-}
-
-*/
