--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -44,7 +44,7 @@ pre {
 
 }
 .navbar-default, .navbar-static-top {
-    background-color: #4D8618;
+    background-color: #973F3F;
     border: 0px;
 }
 a.navbar-brand {
@@ -113,17 +113,17 @@ a.navbar-brand {
 
 #band {
     /*grey =#808080*/
-    background: #79B94C  no-repeat 50% 30%;
+    background: #973F3F  no-repeat 50% 30%;
     height: 400px;
 }
 
-.svg #band {
+/*.svg #band {
     background-image: url(../img/grails-cupsonly-logo-white.svg);
 }
 
 .no-svg #band {
     background-image: url(../img/groovy-logo-white.png);
-}
+}*/
 
 @media (max-width: 1010px) {
     #band {
@@ -899,7 +899,7 @@ html, body, .st-container, .st-pusher, .st-content {
     visibility: hidden;
     width: 300px;
     height: 100%;
-    background: #79B94C;
+    background: #973F3F;
     -webkit-transition: all .5s;
     transition: all .5s;
     right: -600px
