--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -93,7 +93,7 @@ img {
 }
 
 .footer a {
-    color: #973F3F;
+    color: #424242;
 }
 
 .spinner {
@@ -173,7 +173,7 @@ img {
 }
 
 .nav li.dropdown.open ul.dropdown-menu {
-    background-color: #973F3F;
+    background-color: #424242;
 }
 
 /* CREATE/EDIT FORMS AND SHOW PAGES */
@@ -560,7 +560,7 @@ a.skip {
 }
 
 .grails-logo-container {
-    background:#973F3F no-repeat 50% 30%;
+    background:#424242 no-repeat 50% 30%;
     margin-bottom: 20px;
     color: white;
     height:300px;
